# Rtype_Epitech_Project_2022

./: CMakeLists.txt  Doxyfile  README.md
Client/: CMakeLists.txt
Client/include/: ClientTcp.hpp  ClientTcpAsync.hpp  ClientUdp.hpp  ClientUdpAsync.hpp
Client/src/: ClientTcp.cpp  ClientTcpAsync.cpp  ClientUdp.cpp  ClientUdpAsync.cpp  main.cpp
Configuration/: config_enemy.json  config_entity.json  config_map.json  config_quadtree.json  config_texture.json  config_window.json
Documentation/: Configuration_document_descriptions.txt
GameEngine/: Collidable.cpp  Core.cpp  CoreError.cpp  Entity.cpp  EntityManager.cpp  Factory.cpp  FactoryError.cpp  InputMove.cpp  JSONError.cpp  Map.cpp  MapError.cpp  Missile.cpp  Movable.cpp  Move.cpp  ParseConfig.cpp  PlayState.cpp  Position.cpp  Quadtree.cpp  RessourcesError.cpp  Shoot.cpp  StateManager.cpp  Window.cpp  bg.cpp  xml.cpp  xmlError.cpp
GameEngine/include/: AComponent.hpp  AState.hpp  Collidable.hpp  Core.hpp  Entity.hpp  EntityManager.hpp  Factory.hpp  InputMove.hpp  Level.hpp  Map.hpp  Missile.hpp  Movable.hpp  Move.hpp  ParseConfig.hpp  PlayState.hpp  Position.hpp  Quadtree.hpp  ResourceAllocator.hpp  ResourcesManager.hpp  Shoot.hpp  StateManager.hpp  Tileset.hpp  Window.hpp  bg.hpp  xml.hpp
GameEngine/include/Error/: CoreError.hpp  FactoryError.hpp  JSONError.hpp  MapError.hpp  RessourcesError.hpp  XmlError.hpp
GameEngine/include/Interfaces/: IDrawable.hpp  ISprite.hpp  IState.hpp  IStateManager.hpp  IText.hpp  IWindow.hpp
Map/: Map.cpp  pugixml.cpp  xml.cpp
Map/include/: Map.hpp  xml.hpp
Map/map/: csvMap  map_t.tmx  tile.tsx
Player/: Entity.cpp  Player.cpp  main.cpp
Player/BackUp files/: Player2.cpp  PlayerBU.cpp
Player/include/: AComponent.hpp  Player.hpp
Server/: CMakeLists.txt
Server/include/: Connection.hpp  ConnectionUdp.hpp  Message.hpp  MessageTEST.hpp  MessageTcp.hpp  Room.hpp  Serialiser.hpp  Server.hpp  ServerTcpAsync.hpp  ServerUdpAsync.hpp
Server/src/: Connection.cpp  Message.cpp  MessageTcp.cpp  Room.cpp  Server.cpp  ServerTcpAsync.cpp  ServerUdpAsync.cpp  main.cpp
Translator/: a.out
Translator/pugixml-master/: README.md
Translator/pugixml-master/docs/: manual.adoc  manual.html  quickstart.adoc  quickstart.html
Translator/pugixml-master/docs/samples/: include.cpp  load_error_handling.cpp  load_file.cpp  load_memory.cpp  load_options.cpp  load_stream.cpp  modify_add.cpp  modify_base.cpp  modify_remove.cpp  save_custom_writer.cpp  save_declaration.cpp  save_file.cpp  save_options.cpp  save_stream.cpp  save_subtree.cpp  text.cpp  traverse_base.cpp  (+8 more)
assets/map/: csvMap0  map_t.tmx  tile.tsx
poc/: bg_prallax_test.cpp  input_move.cpp  input_shoot.cpp  parser_config_json.cpp  shoot_missile.cpp
poc/GE_example/: CMakeLists.txt  main.cpp
poc/GE_example/include/: Animation.hpp  Bitmask.hpp  C_Animation.hpp  C_KeyboardMovement.hpp  C_Sprite.hpp  C_Transform.hpp  Component.hpp  EnumHash.hpp  Game.hpp  Input.hpp  Object.hpp  ObjectCollection.hpp  ResourceAllocator.hpp  Scene.hpp  SceneGame.hpp  SceneSplashScreen.hpp  SceneStateMachine.hpp  Tile.h  Window.hpp  WorkingDirectory.hpp  allInc.hpp
poc/GE_example/src/: Animation.cpp  Bitmask.cpp  C_Animation.cpp  C_KeyboardMovement.cpp  C_Sprite.cpp  C_Transform.cpp  Game.cpp  Input.cpp  Object.cpp  ObjectCollection.cpp  SceneGame.cpp  SceneSplashScreen.cpp  SceneStateMachine.cpp  Window.cpp  WorkingDirectory.cpp
poc/Quadtree/: main.cpp
poc/Quadtree/include/: Object.hpp  Quadtree.hpp
poc/Quadtree/src/: Object.cpp  Quadtree.cpp
poc/ResourceManagerWithConfig/: ResourceAllocator.hpp  config.json  main.cpp
